--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".AddItemActivity" />
         <activity android:name=".ResultsActivity" />
+        <activity android:name=".AddCategoryActivity" />
     </application>
 
 </manifest>
